--- a/src/app/components/graph/graph.component.html
+++ b/src/app/components/graph/graph.component.html
@@ -1,12 +1,15 @@
+<h2>Présence du Fabricant dans le Top 10 des Magasins</h2>
 <div class="graph-card">
   <!-- ✅ Carte d'affichage de la moyenne -->
   <div class="average-card">
-    <h3>Moyenne des pourcentages</h3>
-    <p [class.high]="average >= 0.5" [class.medium]="average >= 0.2 && average < 0.5" [class.low]="average < 0.2">
-      <strong>{{ average | number:'1.2-2' }}%</strong>
-    </p>
-    <small>Ce pourcentage représente la moyenne des ventes par magasin.</small>
-  </div>
+  <p>
+    <strong>Score Santé 
+      <span [class.high]="average >= 0.5" [class.medium]="average >= 0.2 && average < 0.5" [class.low]="average < 0.2">
+        {{ average | number:'1.2-2' }}%
+      </span>
+    </strong>
+  </p>
+</div>
 
   <!-- ✅ Graphique -->
   <div *ngIf="isBrowser" class="chart-container">
