--- a/src/app/components/graph2-4/graph2-4.component.html
+++ b/src/app/components/graph2-4/graph2-4.component.html
@@ -1,6 +1,5 @@
+<h2>Score Santé Mensuelles</h2>
 <div class="graph-card">
-  <h3>📊 Graphique 2.4 - Score Santé</h3>
-
   <div *ngIf="isBrowser" class="chart-container">
     <canvas baseChart
       [data]="lineChartData"
