--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar">
   <div class="logo">
-    <span class="icon">🚢</span> Pas Bateau de Thibault
+    <span class="icon">📈</span> KPI Dashboard Pro
   </div>
   <ul class="nav-links">
     <li><a href="/">🏠 Stats</a></li>
