--- a/src/app/components/stats/stats.component.html
+++ b/src/app/components/stats/stats.component.html
@@ -1,7 +1,4 @@
-<h2>📊 Statistiques</h2>
- <!-- ✅ Ajout du paramètre -->
-
-<!-- ✅ Graphique -->
+<h2>📊 Répartition des Top 10 Magasins par Catégorie</h2>
 <div *ngIf="isBrowser">
   <div *ngIf="barChartData; else loadingTemplate">
     <canvas baseChart
